[package]
name = "diameter"
description = "get the diameter (max path length) of irc links output"
repository = "https://github.com/xfnw/diameter/"
license = "MIT"
version = "0.2.1"
edition = "2021"

[dependencies]
csv = { version = "1.2.2", optional = true }

[features]
bin = ["dep:csv"]

[[bin]]
name = "diameter"
required-features = ["bin"]
